[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/IMG_0093.jpeg" type="Texture" id=1]
[ext_resource path="res://scripts/MenuControl.gd" type="Script" id=2]
[ext_resource path="res://resources/Calibri.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/player_left.png" type="Texture" id=4]
[ext_resource path="res://resources/player_right.png" type="Texture" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 29
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 18
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 3 )

[node name="Menu" type="Node"]
pause_mode = 2

[node name="Background" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 700.291, 400.3 )
scale = Vector2( 0.728711, 0.74074 )
texture = ExtResource( 1 )

[node name="Interface" type="CanvasLayer" parent="."]
layer = 3

[node name="MenuInterface" type="Control" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="Title" type="Label" parent="Interface/MenuInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.5
margin_top = -165.0
margin_right = 312.5
margin_bottom = -105.0
rect_pivot_offset = Vector2( 1860, 70 )
custom_fonts/font = SubResource( 2 )
text = "Rocket Landing Simulator"

[node name="StartGameBtn" type="MenuButton" parent="Interface/MenuInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -30.0
margin_right = 100.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "Start Game"
flat = false

[node name="SinglePlayerBtn" type="CheckBox" parent="Interface/MenuInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = 70.0
margin_right = 66.5
margin_bottom = 110.0
custom_fonts/font = SubResource( 4 )
text = "Single Player"

[node name="TwoPlayersBtn" type="CheckBox" parent="Interface/MenuInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5027
margin_top = 118.999
margin_right = 61.4973
margin_bottom = 158.999
custom_fonts/font = SubResource( 5 )
text = "Two Players"

[node name="QuitButton" type="MenuButton" parent="Interface/MenuInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = 270.0
margin_right = 74.5
margin_bottom = 307.0
custom_fonts/font = SubResource( 6 )
text = "Quit"
flat = false

[node name="MadeBy" type="Label" parent="Interface/MenuInterface"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.5
margin_top = -35.0
margin_right = 97.5
margin_bottom = -15.0
rect_pivot_offset = Vector2( 1860, 70 )
custom_fonts/font = SubResource( 7 )
text = "Made by Sheriff Olaoye"

[node name="Controls" type="CanvasLayer" parent="Interface"]

[node name="LeftControls" type="Sprite" parent="Interface/Controls"]
position = Vector2( 250, 580 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="RightControls" type="Sprite" parent="Interface/Controls"]
position = Vector2( 1150, 580 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )
[connection signal="pressed" from="Interface/MenuInterface/StartGameBtn" to="Interface/MenuInterface" method="_on_StartGameBtn_pressed"]
[connection signal="toggled" from="Interface/MenuInterface/SinglePlayerBtn" to="Interface/MenuInterface" method="_on_SinglePlayerBtn_toggled"]
[connection signal="toggled" from="Interface/MenuInterface/TwoPlayersBtn" to="Interface/MenuInterface" method="_on_TwoPlayersBtn_toggled"]
[connection signal="pressed" from="Interface/MenuInterface/QuitButton" to="Interface/MenuInterface" method="_on_QuitButton_pressed"]
